# YeastCallingCardsDB

./: .coveragerc  .gitignore  Dockerfile  README.md  manage.py  management.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-and-test.yaml  coverage.yaml
callingcards/: celery.py  urls.py  wsgi.py
callingcards/callingcards/: __init__.py  admin.py  app.py  db_signals.py  filters.py  models.py  models_deprecated.py  querysets.py  querysets_deprecated.py  serializers.py  serializers_deprecated.py  tasks.py  views.py  views_deprecated.py
callingcards/callingcards/filters/: BackgroundFilter.py  CCExperimentFilter.py  CallingCardsSigFilter.py  CallingCards_s3Filter.py  ChipExoFilter.py  ChipExoSigFilter.py  ChipExoSigregionsFilter.py  ChipExo_s3Filter.py  GeneFilter.py  HarbisonChIPFilter.py  HarbisonChIP_s3Filter.py  HopsFilter.py  HopsSourceFilter.py  Hops_s3Filter.py  Hu_s3Filter.py  KemmerenTfkoFilter.py  KemmerenTfko_s3Filter.py  LabFilter.py  McIsaacZEV_s3Filter.py  McIsaacZevFilter.py  PromoterRegionsFilter.py  PromoterRegions_s3Filter.py  QcManualReviewFilter.py  QcMetricsFilter.py  QcR1ToR2TfFilter.py  QcR2ToR1TfFilter.py  QcTfToTransposonFilter.py  RegulatorFilter.py  __init__.py
callingcards/callingcards/migrations/: 0001_initial.py  0002_alter_qcr1tor2tf_tally_alter_qcr2tor1tf_tally_and_more.py  0002_create_promoter_and_background_source.py  0003_alter_background_source.py  0003_remove_promoterregions_associated_direction_and_more.py  0004_alter_background_modifiedby_and_more.py  0004_alter_promoterregions_source.py  0005_callingcardssig.py  0006_hops_s3.py  0007_hops_s3_chr_format_hopssource.py  0008_hops_s3_source.py  0009_lab.py  0010_ccexperiment_lab.py  0011_chipexo.py  0012_remove_chipexo_pval_chipexo_strength.py  0013_callingcardssig_hops_source.py  0014_alter_callingcardssig_options_and_more.py  0015_chrmap_genomic_hops_s3_genomic_hops_and_more.py  0016_remove_chrmap_genomic_chrmap_type_hops_s3_mito_hops.py
callingcards/callingcards/models/: Background.py  BackgroundSource.py  BaseModel.py  CCExperiment.py  CCTF.py  CallingCardsSig.py  CallingCards_s3.py  ChipExo.py  ChipExoSig.py  ChrMap.py  (+25 more)
callingcards/config/: common.py  local.py  production.py
docs/source/: conf.py  index.rst  models.rst  testing_orm.ipynb
mkdocs_docs/: index.md
(+153 files in other folders)
